This is a brief overview of user-visible changes in AdPlug.

Changes for version 2.2:
------------------------
- New format support:
  - JBM: JBM Adlib Music Format
- Fixed current subsong rewind in D00 player.
- Added test case for ADL file format.
- Fixed replay bug in DRO player (thanks to Adam Nielsen).

Changes for version 2.1:
------------------------
- New format support:
  - ADL: Westwood ADL File Format
- Added OPL3 support:
  - A2M: AdLib Tracker 2 versions 5-8
- All players are endian-clean now.
- Lots of security fixes (thanks to Luigi Auriemma).
- Fixed volume handling in AMD player.
- Fixed a buffer overflow in ROL player (thanks to HIGUCHI Daisuke).
- Fixed vibrato & volume slides in D00 player (thanks to Dennis
  Lindroos).
- Removed superfluous exit() call in RIX player (thanks to Martin
  Michlmayr).
- Enhanced generic Protracker player features:
  - Supports up to 32 channels
  - OPL3 output support
  - New behavior flags and commands

Changes for version 2.0:
------------------------
- New format support:
  - MSC: AdLib MSCplay
  - RIX: Softstar RIX OPL Music Format
- Added OPL3 support:
  - RAW: RdosPlay RAW
- Dual OPL2 and OPL3 support (OPL3 only in non-free version).
- This version is not binary-compatible with older versions!
  All linked applications need to be recompiled.
- License change: Ken Silverman permitted to relicense his
  emulator under the LGPL. It is included in the free distribution
  now.
- Changes to IMF player:
  - Supporting Adam Nielsen's tag format now.
  - Files ending in .IMF now have a default timer refresh rate of
    560Hz. All other files have a rate of 700Hz. Please rename your
    files accordingly or use the AdPlug database.
- CMF player supports rhythm mode now.
- S3M player handles repeating commands correctly now.
- MS Visual C++ and OpenWatcom build systems not actively supported
  anymore. They are still available in the contrib directory though.

Changes for version 1.5:
------------------------