@@ -1,4 +1,4 @@
-AdPlug is copyright (C) 1999 - 2007 Simon Peter <dn.tlp@gmx.net>, et al.
+AdPlug is copyright (C) 1999 - 2008 Simon Peter <dn.tlp@gmx.net>, et al.
 All library code is written by Simon Peter, except the parts listed below.
 
 Additional Credits:
@@ -74,6 +74,9 @@ Torbjorn Andersson,
 Johannes Schickel 'lordhoto' <lordhoto at scummvm dot org>:
   - Development of original ADL (Westwood ADL File Format) player in
     ScummVM, which has been adapted for AdPlug.
+
+Adam Nielsen <malvineous@shikadi.net>:
+  - Fixes for CMF rhythm mode support
 
 Dennis Lindroos <lindroos@nls.fi>:
   - JBM: JBM Adlib Music format player development
